fixed uneven padding on articles

--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,7 @@ html, body{ scroll-behavior: smooth; font-family: -apple-system, BlinkMacSystemF
     background: linear-gradient(rgba(0, 0, 0, 0.5)), url("../asset/img/img10.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: 50% 43%;
 }
 
 .hero-txt{
@@ -16,35 +17,26 @@ html, body{ scroll-behavior: smooth; font-family: -apple-system, BlinkMacSystemF
     color: white;
 }
 
-.hero-txt h1{ font-size: 110px; margin-top: 150px;}
+.hero-txt h1{ font-size: 100px; margin-top: 150px; font-weight: 500;}
 
-.hero-txt p{font-size: 24px; line-height: 30px;}
-.hero-txt .p1{ margin-top: -5px;}
+.hero-txt p{font-size: 20px; line-height: 30px;}
+.hero-txt .p1{ margin-top: 5px;}
 
-.featured{
-    background-color: black;
-    color: white;
-    padding-top: 200px;
-}
+.featured{ background-color: black; color: white; padding-top: 170px; padding-bottom: 128px;}
 
-.featured header{
-    display: flex;
-    align-items: left; 
-    justify-content: left; 
-    flex-direction: column;
-    margin-left: 50px;
-}
+.featured header{ margin-left: 50px; }
 
-.featured header h5{ margin-bottom: 20px; font-size: 18px; color: gray;}
-.featured header h2{ font-size: 60px;}
+header h5{ margin-bottom: 20px; font-size: 18px; color: gray; font-weight: 400; }
+header h2{ font-size: 60px; font-weight: 500;}
 
 .grid-wrapper{ 
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: auto;
-    gap: 10px;
-    padding: 50px;
-    padding-top: 40px;
+    gap: 30px;
+    padding: 60px;
+    padding-top: 60px;
+    align-items: stretch;
 }
 
 .grid-wrapper .container img{
@@ -55,9 +47,11 @@ html, body{ scroll-behavior: smooth; font-family: -apple-system, BlinkMacSystemF
     display: block;
 } 
 
-.f-1, .f-2, .f-3, .f-4{ background-color: #222020; padding: auto; }
 .container article h5{ font-size: 16px; color: gray;}
 .container article h3{ font-size: 32px; margin: 10px 0;}
 .container article p{ font-size: 18px; line-height: 28px;}
-    
+.container{ display: flex; flex-direction: column; height: 100%;}
+article{  padding: 50px;  background-color: #222020; flex: 1; display: flex; flex-direction: column;}
+article p{ margin-top: 40px;}
+.story-link a{text-decoration: none; color: white; }
 
